Data transformation pipeline experimentation done

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -135,7 +135,7 @@
     "import urllib.request as request\n",
     "import gdown\n",
     "from wineQuality import logger\n",
-    "from wineQuality.utilities.common import get_size"
+    "from wineQuality.utils.common import get_size"
    ]
   },
   {
