--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -354,7 +354,7 @@
    "outputs": [],
    "source": [
     "from wineQuality.constants import *\n",
-    "from wineQuality.utilities.common import read_yaml, create_directories"
+    "from wineQuality.utils.common import read_yaml, create_directories"
    ]
   },
   {
