--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,21 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ModelEvaluation:\n",
-    "    def __init__(self, config: ModelEvaluationConfig) -> None:\n",
+    "    def __init__(self, config: ModelEvaluationConfig):\n",
     "        self.config = config\n",
-    "    \n",
-    "    def eval_metrics(self, actual, predicted):\n",
-    "        rmse = np.sqrt(mean_squared_error(actual, predicted))\n",
-    "        mae = mean_absolute_error(actual, predicted)\n",
-    "        r2 = r2_score(actual, predicted)\n",
     "\n",
+    "    \n",
+    "    def eval_metrics(self,actual, pred):\n",
+    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
+    "        mae = mean_absolute_error(actual, pred)\n",
+    "        r2 = r2_score(actual, pred)\n",
     "        return rmse, mae, r2\n",
     "    \n",
+    "\n",
+    "\n",
     "    def log_into_mlflow(self):\n",
     "\n",
     "        test_data = pd.read_csv(self.config.test_data_path)\n",
@@ -178,53 +180,59 @@
     "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
     "        test_y = test_data[[self.config.target_column]]\n",
     "\n",
+    "\n",
     "        mlflow.set_registry_uri(self.config.mlflow_uri)\n",
-    "        tracking_uri_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
+    "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
+    "\n",
     "\n",
     "        with mlflow.start_run():\n",
     "\n",
-    "            predicted = model.predict(test_x)\n",
+    "            predicted_qualities = model.predict(test_x)\n",
     "\n",
-    "            rmse, mae, r2 = self.eval_metrics(test_y, predicted)\n",
-    "\n",
-    "            scores = {\"rmse\": rmse, \"mae\": mae, \"r2_score\": r2}\n",
+    "            (rmse, mae, r2) = self.eval_metrics(test_y, predicted_qualities)\n",
+    "            \n",
+    "            scores = {\"rmse\": rmse, \"mae\": mae, \"r2\": r2}\n",
     "            save_json(path=Path(self.config.metric_file_name), data=scores)\n",
     "\n",
     "            mlflow.log_params(self.config.all_params)\n",
+    "\n",
     "            mlflow.log_metric(\"rmse\", rmse)\n",
+    "            mlflow.log_metric(\"r2\", r2)\n",
     "            mlflow.log_metric(\"mae\", mae)\n",
-    "            mlflow.log_metric(\"r2_score\", r2)\n",
     "\n",
-    "            signature = infer_signature(test_x, predicted)\n",
+    "            signature = infer_signature(test_x, predicted_qualities)\n",
     "\n",
-    "            if tracking_uri_type_store == \"file\":\n",
+    "            if tracking_url_type_store != \"file\":\n",
     "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"ElasticNetModel\", signature=signature)\n",
     "            else:\n",
-    "                mlflow.sklearn.log_model(model, \"model\")"
+    "                mlflow.sklearn.log_model(model, \"model\")\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-03-30 10:06:10,742: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-03-30 10:06:10,761: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-03-30 10:06:10,797: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-03-30 10:06:10,809: INFO: common: Created directory at: artifacts/model_evaluation]\n",
-      "[2024-03-30 10:06:12,962: INFO: common: Json file saved at: artifacts/model_evaluation/metrics.json]\n"
+      "[2024-03-30 10:42:31,040: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-03-30 10:42:31,044: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-03-30 10:42:31,051: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-03-30 10:42:31,056: INFO: common: Created directory at: artifacts/model_evaluation]\n",
+      "[2024-03-30 10:42:31,752: INFO: common: Json file saved at: artifacts/model_evaluation/metrics.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kalema/anaconda3/lib/python3.11/site-packages/_distutils_hack/__init__.py:26: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+      "Registered model 'ElasticNetModel' already exists. Creating a new version of this model...\n",
+      "2024/03/30 10:42:44 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: ElasticNetModel, version 3\n",
+      "Created version '3' of model 'ElasticNetModel'.\n"
      ]
     }
    ],
